--- a/.nanorc
+++ b/.nanorc
@@ -7,7 +7,15 @@ set zap
 set afterends
 set brackets ""')>]}"
 set matchbrackets "(<[{)>]}"
+set mouse
 
+
+bind M-H home main
+bind M-N end  main
+bind M-I  up  main
+bind M-J  left main
+bind M-L  right main
+bind M-K  down  main
 bind ^C   copy          main
 bind ^X   cut           main
 bind ^V   paste         main
@@ -20,3 +28,5 @@ bind ^R   redo        main
 bind M-F nextword       main
 bind M-B prevword       main
 bind M-E findbracket    main
+bind M-U prevword main
+bind M-O nextword main
