--- a/.nanorc
+++ b/.nanorc
@@ -1,4 +1,3 @@
-
 set tabsize 2 
 set wordchars "_"
 set linenumbers
@@ -25,8 +24,13 @@ bind ^Q   exit          all
 bind M-Z   suspend       main
 bind ^Z	  undo  main
 bind ^R   redo        main
+bind ^G gotoline main
+bind ^H help main
 bind M-F nextword       main
 bind M-B prevword       main
-bind M-E findbracket    main
+bind M-] findbracket    main
 bind M-U prevword main
 bind M-O nextword main
+bind M-E end main
+bind M-A home main
+bind ^-Space
