--- a/.nanorc
+++ b/.nanorc
@@ -19,7 +19,6 @@ bind ^C   copy          main
 bind ^X   cut           main
 bind ^V   paste         main
 bind ^K   zap           main
-bind ^H   chopwordleft  all
 bind ^Q   exit          all
 bind M-Z   suspend       main
 bind ^Z	  undo  main
@@ -34,3 +33,4 @@ bind M-O nextword main
 bind M-E end main
 bind M-A home main
 bind ^Space mark main
+bind ^Bsp chopwordleft all
